--- a/JSGrundlagen/index.html
+++ b/JSGrundlagen/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>JS Grundlagen</title>
     <script src="main.js"></script>
+    <script src="funWithConsole.js"></script>
 </head>
 
 <body>
